--- a/编译原理/第 2  章 (预备知识)文法和语言.md
+++ b/编译原理/第 2  章 (预备知识)文法和语言.md
@@ -1,117 +1,121 @@
-一、学习目的和要求
 
-　　文法是构成程序设计语言的基础，熟悉文法是理解编译程序的关键。本章主要介绍文法的表示方法包括 符号、符号串及其集合的运算;文法的直观概念;文法和语言的形式定义;文法的类型;上下文无关文法及其语法树;句型的分析等。要求学生掌握文法的概念和形式语言的概念及类型。
 
-　　二、课程内容
+# **第 1 章 文法和语言**
 
-　　第一节 符号、符号串及其集合的运算
+## 一、学习目的和要求
 
-　　任何一种语言都是由该语言的基本符号组成的符号串的集合。
+文法是构成程序设计语言的基础，熟悉文法是理解编译程序的关键。本章主要介绍文法的表示方法包括 符号、符号串及其集合的运算;文法的直观概念;文法和语言的形式定义;文法的类型;上下文无关文法及其语法树;句型的分析等。要求学生掌握文法的概念和形式语言的概念及类型。
 
-　　( 一 ) 介绍字母表和符号串的概念;
+## 二、课程内容
 
-　　( 二 ) 介绍符号串及其集合的运算 ;
+### 第一节 符号、符号串及其集合的运算
 
-　　第二节 文法的直观概念
+任何一种语言都是由该语言的基本符号组成的符号串的集合。
 
-　　( 一 ) 文法的定义;
+( 一 ) 介绍字母表和符号串的概念;
 
-　　( 二 ) 规则 ;
+( 二 ) 介绍符号串及其集合的运算 ;
 
-　　( 三 ) 推导的定义 。
+### 第二节 文法的直观概念
 
-　　第三节 文法和语言的形式定义
+( 一 ) 文法的定义;
 
-　　( 一 ) 文法的形式定义;
+( 二 ) 规则 ;
 
-　　( 二 ) 推导的形式定义;
+( 三 ) 推导的定义 。
 
-　　( 三 ) 语言的形式定义。
+### 第三节 文法和语言的形式定义
 
-　　第四节 文法的类型
+( 一 ) 文法的形式定义;
 
-　　( 一 ) Chomsky 分类法
+( 二 ) 推导的形式定义;
 
-　　三、考核知识点
+( 三 ) 语言的形式定义。
 
-　　( 一 ) 文法的概念及运算
+### 第四节 文法的类型
 
-　　( 二 ) 文法和语言的形式定义
+( 一 ) Chomsky 分类法
 
-　　( 三 ) 短语、句型、分析树等概念
+## 三、考核知识点
 
-　　( 四 ) 如何区分文法的四种类型
+( 一 ) 文法的概念及运算
 
-　　四、考核要求
+( 二 ) 文法和语言的形式定义
 
-　　( 一 ) 文法的概念及运算
+( 三 ) 短语、句型、分析树等概念
 
-　　1. 识记：什么叫文法，什么叫规则和推导。 2. 领会： 字母表、符号串和集合的概念及运算 。
+( 四 ) 如何区分文法的四种类型
 
-　　( 二 ) 文法和语言的形式定义
+## 四、考核要求
 
-　　1. 识记：文法的四元表示、推导、短语和句柄等概念;语言的形式定义。 2. 领会：文法和语言的关系;如何通过分析树寻找短语和句柄。
+( 一 ) 文法的概念及运算
 
-　　( 三 ) 文法的类型
+1. 识记：什么叫文法，什么叫规则和推导。 2. 领会： 字母表、符号串和集合的概念及运算 。
 
-　　1. 识记：文法的四种类型。领会：如何区分文法的类型。
+( 二 ) 文法和语言的形式定义
 
-　　**第 2 章 词法分析**
+1. 识记：文法的四元表示、推导、短语和句柄等概念;语言的形式定义。 2. 领会：文法和语言的关系;如何通过分析树寻找短语和句柄。
 
-　　一、学习目的和要求
+( 三 ) 文法的类型
 
-　　本章主要介绍 词法分析器的构成。词法分析器的作用是把构成源程序的字符流翻译成记号流，并且完成和用户接口的一些任务。围绕词法分析器的自动生成展开介绍正规式、状态转换图和有限自动机概念。 要求学生掌握词法分析器的输入输出形式和词法分析的各种基本方法。
+1. 识记：文法的四种类型。领会：如何区分文法的类型。
 
-　　二、课程内容
+# **第 2 章 词法分析**
 
-　　第一节 词法记号及属性
+## 一、学习目的和要求
 
-　　( 一 ) 介绍 词法记号、模式、词法单元 的概念 ;
+本章主要介绍 词法分析器的构成。词法分析器的作用是把构成源程序的字符流翻译成记号流，并且完成和用户接口的一些任务。围绕词法分析器的自动生成展开介绍正规式、状态转换图和有限自动机概念。 要求学生掌握词法分析器的输入输出形式和词法分析的各种基本方法。
 
-　　( 二 ) 介绍词法记号的 token 表示法 ;
+## 二、课程内容
 
-　　第二节 词法记号的描述与识别
+### 第一节 词法记号及属性
 
-　　( 一 ) 复习 串和语言的概念及运算 ;
+( 一 ) 介绍 词法记号、模式、词法单元 的概念 ;
 
-　　( 二 ) 介绍正规式的概念及其代数性质 ;
+( 二 ) 介绍词法记号的 token 表示法 ;
 
-　　( 三 ) 正规定义式的概念 ;
+### 第二节 词法记号的描述与识别
 
-　　( 四 ) 正规文法和正规式的相互转换及状态转换图。
+( 一 ) 复习 串和语言的概念及运算 ;
 
-　　第三节 有限自动机
+( 二 ) 介绍正规式的概念及其代数性质 ;
 
-　　( 一 ) 不确定的有限自动机(简称 NFA ) ;
+( 三 ) 正规定义式的概念 ;
 
-　　( 二 ) 确定的有限自动机(简称 DFA ) ;
+( 四 ) 正规文法和正规式的相互转换及状态转换图。
 
-　　• NFA 到 DFA 的变换 。
+### 第三节 有限自动机
 
-　　三、考核知识点
+( 一 ) 不确定的有限自动机(简称 NFA ) ;
 
-　　( 一 ) 词法输出的 token 表示法;
+( 二 ) 确定的有限自动机(简称 DFA ) ;
 
-　　( 二 ) 写正规式及代数性质的体现;
+• NFA 到 DFA 的变换 。
 
-　　( 三 ) 非形式描述的语言 表示成 正规式的形式;
+##  三、考核知识点
 
-　　( 四 ) 正规式 转换成 NFA ;
+( 一 ) 词法输出的 token 表示法;
 
-　　( 五 ) 非形式描述的语言 表示成 NFA 的形式;
+( 二 ) 写正规式及代数性质的体现;
 
-　　( 六 ) 如何将 NFA 转换成 DFA 。
+( 三 ) 非形式描述的语言 表示成 正规式的形式;
 
-　　四、考核要求
+( 四 ) 正规式 转换成 NFA ;
 
-　　( 一 ) 词法输出的 token 表示法
+( 五 ) 非形式描述的语言 表示成 NFA 的形式;
 
-　　1. 识记： 词法记号、模式、词法单元 的概念 。 2. 领会：词法输出的 token 表示 。
+( 六 ) 如何将 NFA 转换成 DFA 。
 
-　　( 二 ) 正规式及其代数性质
+## 四、考核要求
 
-　　1. 识记：正规式的表示方法;正规定义式。 2. 应用：如何将 非形式描述的语言 表示成 正规式的形式 。
+( 一 ) 词法输出的 token 表示法
 
-　　( 三 ) NFA 和 DFA
+1. 识记： 词法记号、模式、词法单元 的概念 。 2. 领会：词法输出的 token 表示 。
 
-　　1. 识记：什么叫 NFA 和 DFA 。 2. 应用： NFA 和 DFA 的相互转换;正规式与 NFA 的相互转换。
+( 二 ) 正规式及其代数性质
+
+1. 识记：正规式的表示方法;正规定义式。 2. 应用：如何将 非形式描述的语言 表示成 正规式的形式 。
+
+( 三 ) NFA 和 DFA
+
+1. 识记：什么叫 NFA 和 DFA 。 2. 应用： NFA 和 DFA 的相互转换;正规式与 NFA 的相互转换。
